test/files/run/stub-errors/Typeclass.check
error: newSource1.scala:4: missing or invalid dependency while loading 'value stuberrors.B.t' in class file 'B.class'.
Already compiled 'value stuberrors.B.t' requires access to type A in package stuberrors.
Make sure that type A is in your classpath and check for conflicting dependencies with `-Ylog-classpath`.
A full rebuild may help if 'B.class' was compiled against an incompatible version of stuberrors.
    class C { println(new B(1)) }
          ^
